force-app/main/default/objects/Exception_Log__c/fields/Apex_Method_Event__c.field-meta.xml
<CustomField>
    <fullName>Apex_Method_Event__c</fullName>
    <label>Apex Method/Event</label>
    <length>255</length>
    <type>Text</type>
</CustomField>