force-app/main/default/objects/Exception_Log__c/fields/DML_Object__c.field-meta.xml
<CustomField>
    <fullName>DML_Object__c</fullName>
    <label>DML Object</label>
    <length>255</length>
    <type>Text</type>
</CustomField>