force-app/main/default/objects/Exception_Log__c/fields/Error_Fields__c.field-meta.xml
<CustomField>
    <fullName>Error_Fields__c</fullName>
    <label>Error Fields</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>